Layer classes were added

--- a/ML_Practice_with_books.ipynb
+++ b/ML_Practice_with_books.ipynb
@@ -2921,6 +2921,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X =  [[1 2 3]\n",
+      " [4 5 6]]\n",
+      "Summing over first dimension and then second:\n",
+      "[5 7 9] \t [ 6 15] \n",
+      "\n",
+      "Expanding over first dimension:\n",
+      "[[[1 2 3]\n",
+      "  [4 5 6]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]]] \n",
+      "\n",
+      "Expanding over last dimension:\n",
+      "[[[1 1 1 1 1 1]\n",
+      "  [2 2 2 2 2 2]\n",
+      "  [3 3 3 3 3 3]]\n",
+      "\n",
+      " [[4 4 4 4 4 4]\n",
+      "  [5 5 5 5 5 5]\n",
+      "  [6 6 6 6 6 6]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Couple of experiments to understand the code better\n",
+    "\n",
+    "x = Tensor(np.array([[1,2,3],[4,5,6]]))\n",
+    "print('X = ', x)\n",
+    "print('Summing over first dimension and then second:')\n",
+    "print(x.sum(0), '\\t', x.sum(1), '\\n')\n",
+    "\n",
+    "print('Expanding over first dimension:')\n",
+    "print(x.expand(dim=0, copies=4), '\\n')\n",
+    "\n",
+    "print('Expanding over last dimension:')\n",
+    "print(x.expand(dim=2, copies=6))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -2928,12 +2981,242 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ True  True  True  True  True]\n"
+      "#0\n",
+      "[0.58128304]\n",
+      "\n",
+      "#1\n",
+      "[0.48988149]\n",
+      "\n",
+      "#2\n",
+      "[0.41375111]\n",
+      "\n",
+      "#3\n",
+      "[0.34489412]\n",
+      "\n",
+      "#4\n",
+      "[0.28210124]\n",
+      "\n",
+      "#5\n",
+      "[0.2254484]\n",
+      "\n",
+      "#6\n",
+      "[0.17538853]\n",
+      "\n",
+      "#7\n",
+      "[0.1324231]\n",
+      "\n",
+      "#8\n",
+      "[0.09682769]\n",
+      "\n",
+      "#9\n",
+      "[0.06849361]\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Page 286 (corrections for autograd), 289 (neg), 290-291 (other operations)\n",
+    "# Page 296 - start of using autograd\n",
+    "\n",
+    "import numpy as np\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\n",
+    "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\n",
+    "\n",
+    "w = list()\n",
+    "w.append(Tensor(np.random.rand(2,3), autograd=True))\n",
+    "w.append(Tensor(np.random.rand(3,1), autograd=True))\n",
+    "\n",
+    "for i in range(10):\n",
+    "    pred = data.mm(w[0]).mm(w[1])\n",
+    "    loss = ((pred - target) * (pred - target)).sum(0)\n",
+    "    print('#{}'.format(i))\n",
+    "    print(loss.data)\n",
+    "    # print('-')\n",
+    "    # print(np.ones_like(loss.data))\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\n",
+    "    \n",
+    "    for w_ in w:\n",
+    "        w_.data -= w_.grad.data * 0.1\n",
+    "        w_.grad.data *= 0\n",
+    "        \n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 297 - SGD (stochastic gradient descent) Optimizer\n",
+    "\n",
+    "class SGD(object):\n",
+    "    def __init__(self, parameters, alpha=0.1):\n",
+    "        self.parameters = parameters\n",
+    "        self.alpha = alpha\n",
+    "        \n",
+    "    def zero(self):\n",
+    "        for p in self.parameters:\n",
+    "            p.grad.data *= 0\n",
+    "            \n",
+    "    def step(self, zero=True):\n",
+    "        for p in self.parameters:\n",
+    "            p.data -= p.grad.data * self.alpha\n",
+    "            if (zero):\n",
+    "                p.grad.data *= 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.58128304]\n",
+      "[0.48988149]\n",
+      "[0.41375111]\n",
+      "[0.34489412]\n",
+      "[0.28210124]\n",
+      "[0.2254484]\n",
+      "[0.17538853]\n",
+      "[0.1324231]\n",
+      "[0.09682769]\n",
+      "[0.06849361]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\n",
+    "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\n",
+    "\n",
+    "w = list()\n",
+    "w.append(Tensor(np.random.rand(2,3), autograd=True))\n",
+    "w.append(Tensor(np.random.rand(3,1), autograd=True))\n",
+    "\n",
+    "optim = SGD(parameters=w, alpha=0.1)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    pred = data.mm(w[0]).mm(w[1])\n",
+    "    loss = ((pred - target)*(pred - target)).sum(0)\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\n",
+    "    optim.step()\n",
+    "    \n",
+    "    print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 298-300 - Layers\n",
+    "\n",
+    "class Layer(object):\n",
+    "    def __init__(self):\n",
+    "        self.parameters = list()\n",
+    "        \n",
+    "    def get_parameters(self):\n",
+    "        return self.parameters\n",
+    "    \n",
+    "class Linear(Layer):\n",
+    "    def __init__(self, n_inputs, n_outputs):\n",
+    "        super().__init__()\n",
+    "        W = np.random.randn(n_inputs, n_outputs) * np.sqrt(2.0/(n_inputs))\n",
+    "        self.weight = Tensor(W, autograd=True)\n",
+    "        self.bias = Tensor(np.zeros(n_outputs), autograd=True)\n",
+    "        \n",
+    "        self.parameters.append(self.weight)\n",
+    "        self.parameters.append(self.bias)\n",
+    "        \n",
+    "    def forward(self, input):\n",
+    "        return input.mm(self.weight) + self.bias.expand(0, len(input.data))\n",
+    "    \n",
+    "class Sequential(object):\n",
+    "    def __init__(self, layers=list()):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.layers = layers\n",
+    "        \n",
+    "    def add(self, layer):\n",
+    "        self.layers.append(layer)\n",
+    "        \n",
+    "    def forward(self, input):\n",
+    "        for layer in self.layers:\n",
+    "            input = layer.forward(input)\n",
+    "        return input\n",
+    "    \n",
+    "    def get_parameters(self):\n",
+    "        params = list()\n",
+    "        for l in self.layers:\n",
+    "            params += l.get_parameters()\n",
+    "        return params\n",
+    "    \n",
+    "class MSELoss(Layer):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "    def forward(self, pred, target):\n",
+    "        return ((pred - target)*(pred - target)).sum(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.33428272]\n",
+      "[0.06743796]\n",
+      "[0.0521849]\n",
+      "[0.04079507]\n",
+      "[0.03184365]\n",
+      "[0.02479336]\n",
+      "[0.01925443]\n",
+      "[0.01491699]\n",
+      "[0.01153118]\n",
+      "[0.00889602]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\n",
+    "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\n",
+    "\n",
+    "model = Sequential([Linear(2,3), Linear(3,1)])\n",
+    "criterion = MSELoss()\n",
+    "\n",
+    "optim = SGD(parameters=model.get_parameters(), alpha=0.05)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    pred = model.forward(data)\n",
+    "    loss = criterion.forward(pred, target)\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\n",
+    "    optim.step()\n",
+    "\n",
+    "    print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class Tensor\n",
     "import numpy as np\n",
     "\n",
     "class Tensor(object):\n",
@@ -2968,6 +3251,10 @@
     "        \n",
     "    def backward(self, grad=None, grad_origin=None):\n",
     "        if (self.autograd):\n",
+    "            # Так как backward первый раз вызывается именно у ошибки нет смысла передавать туда что-то в качестве grad\n",
+    "            if (grad is None):\n",
+    "                grad = Tensor(np.ones_like(self.data))\n",
+    "            \n",
     "            if (grad_origin is not None):\n",
     "                if (self.children[grad_origin.id] == 0):\n",
     "                    raise Exception('cannot backprop more than once')\n",
@@ -3017,8 +3304,16 @@
     "                    self.creators[0].backward(self.grad.expand(dim, ds))\n",
     "                    \n",
     "                if ('expand' in self.creation_op):\n",
-    "                    dim = int(self.creation_op.split('_')[1])\n",
-    "                    self.creators[0].backward(self.grad.sum(dim))\n",
+    "                    try:\n",
+    "                        dim = int(self.creation_op.split('_')[1])\n",
+    "                        self.creators[0].backward(self.grad.sum(dim))\n",
+    "                    except:\n",
+    "                        print(self.creation_op)\n",
+    "                        raise ValueError\n",
+    "                        \n",
+    "                if (self.creation_op == 'sigmoid' or self.creation_op == 'tanh'):\n",
+    "                    ones = Tensor(np.ones_like(self.grad.data))\n",
+    "                    self.creators[0].backward(self.grad * (self * (ones - self)))\n",
     "    \n",
     "    def __add__(self, other):\n",
     "        if (self.autograd and other.autograd):\n",
@@ -3072,7 +3367,7 @@
     "            return Tensor(new_data, \n",
     "                          autograd=True, \n",
     "                          creators=[self], \n",
-    "                          creation_op='expand'+str(dim))\n",
+    "                          creation_op='expand_'+str(dim))\n",
     "        return Tensor(new_data)\n",
     "    \n",
     "    def transpose(self):\n",
@@ -3091,122 +3386,92 @@
     "                          creation_op='mm')\n",
     "        return Tensor(self.data.dot(x.data))\n",
     "    \n",
+    "    def sigmoid(self):\n",
+    "        if (self.autograd):\n",
+    "            return Tensor(1 / (1 + np.exp(-self.data)), \n",
+    "                          autograd=True, \n",
+    "                          creators=[self], \n",
+    "                          creation_op='sigmoid')\n",
+    "        return Tensor(1 / (1 + np.exp(-self.data)))\n",
+    "    \n",
+    "    def tanh(self):\n",
+    "        if (self.autograd):\n",
+    "            return Tensor(np.tanh(self.data), \n",
+    "                          autograd=True, \n",
+    "                          creators=[self], \n",
+    "                          creation_op='tanh')\n",
+    "        return Tensor(np.tanh(self.data))\n",
+    "    \n",
     "    def __repr__(self):\n",
     "        return str(self.data.__repr__())\n",
     "    \n",
     "    def __str__(self):\n",
-    "        return str(self.data.__str__())\n",
+    "        return str(self.data.__str__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 303 - Activation Function Objects\n",
+    "\n",
+    "class Tanh(Layer):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "    def forward(self, input):\n",
+    "        return input.tanh()\n",
     "    \n",
-    "a = Tensor([1,2,3,4,5], autograd=True)\n",
-    "b = Tensor([2,2,2,2,2], autograd=True)\n",
-    "c = Tensor([5,4,3,2,1], autograd=True)\n",
-    "\n",
-    "d = a + (-b)\n",
-    "e = (-b) + c\n",
-    "f = d + e\n",
-    "\n",
-    "f.backward(Tensor(np.array([1,1,1,1,1])))\n",
-    "\n",
-    "print(b.grad.data == np.array([-2,-2,-2,-2,-2]))"
+    "class Sigmoid(Layer):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "    def forward(self, input):\n",
+    "        return input.sigmoid()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X =  [[1 2 3]\n",
-      " [4 5 6]]\n",
-      "Summing over first dimension and then second:\n",
-      "[5 7 9] \t [ 6 15] \n",
-      "\n",
-      "Expanding over first dimension:\n",
-      "[[[1 2 3]\n",
-      "  [4 5 6]]\n",
-      "\n",
-      " [[1 2 3]\n",
-      "  [4 5 6]]\n",
-      "\n",
-      " [[1 2 3]\n",
-      "  [4 5 6]]\n",
-      "\n",
-      " [[1 2 3]\n",
-      "  [4 5 6]]] \n",
-      "\n",
-      "Expanding over last dimension:\n",
-      "[[[1 1 1 1 1 1]\n",
-      "  [2 2 2 2 2 2]\n",
-      "  [3 3 3 3 3 3]]\n",
-      "\n",
-      " [[4 4 4 4 4 4]\n",
-      "  [5 5 5 5 5 5]\n",
-      "  [6 6 6 6 6 6]]]\n"
+      "[1.06372865]\n",
+      "[0.51186358]\n",
+      "[0.40813918]\n",
+      "[0.28195888]\n",
+      "[0.23630241]\n",
+      "[0.17087349]\n",
+      "[0.1422059]\n",
+      "[0.09038856]\n",
+      "[0.07491572]\n",
+      "[0.05888053]\n"
      ]
     }
    ],
    "source": [
-    "# Couple of experiments to understand the code better\n",
-    "\n",
-    "x = Tensor(np.array([[1,2,3],[4,5,6]]))\n",
-    "print('X = ', x)\n",
-    "print('Summing over first dimension and then second:')\n",
-    "print(x.sum(0), '\\t', x.sum(1), '\\n')\n",
-    "\n",
-    "print('Expanding over first dimension:')\n",
-    "print(x.expand(dim=0, copies=4), '\\n')\n",
-    "\n",
-    "print('Expanding over last dimension:')\n",
-    "print(x.expand(dim=2, copies=6))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.58128304]\n",
-      "[0.48988149]\n",
-      "[0.41375111]\n",
-      "[0.34489412]\n",
-      "[0.28210124]\n",
-      "[0.2254484]\n",
-      "[0.17538853]\n",
-      "[0.1324231]\n",
-      "[0.09682769]\n",
-      "[0.06849361]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Page 296 - start of using autograd\n",
-    "\n",
     "import numpy as np\n",
     "np.random.seed(0)\n",
     "\n",
     "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\n",
     "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\n",
     "\n",
-    "w = list()\n",
-    "w.append(Tensor(np.random.rand(2,3), autograd=True))\n",
-    "w.append(Tensor(np.random.rand(3,1), autograd=True))\n",
+    "model = Sequential([Linear(2,3), Tanh(), Linear(3,1), Sigmoid()])\n",
+    "criterion = MSELoss()\n",
+    "\n",
+    "optim = SGD(parameters=model.get_parameters(), alpha=3)\n",
     "\n",
     "for i in range(10):\n",
-    "    pred = data.mm(w[0]).mm(w[1])\n",
-    "    loss = ((pred - target) * (pred - target)).sum(0)\n",
+    "    pred = model.forward(data)\n",
+    "    loss = criterion.forward(pred, target)\n",
     "    loss.backward(Tensor(np.ones_like(loss.data)))\n",
-    "    \n",
-    "    for w_ in w:\n",
-    "        w_.data -= w_.grad.data * 0.1\n",
-    "        w_.grad.data *= 0\n",
-    "        \n",
+    "    optim.step()\n",
+    "\n",
     "    print(loss)"
    ]
   }
