I have finished the book

--- a/ML_Practice_with_books.ipynb
+++ b/ML_Practice_with_books.ipynb
@@ -4928,13 +4928,7 @@
       " Iter: 0 - Alpha: 0.05 - Batch 104/249 - Min Loss: 25.71 - Loss: 25.717549936420856\n",
       " Iter: 0 - Alpha: 0.05 - Batch 105/249 - Min Loss: 25.63 - Loss: 25.6395137557101\n",
       " Iter: 0 - Alpha: 0.05 - Batch 106/249 - Min Loss: 25.54 - Loss: 25.544962938985915\n",
-      " Iter: 0 - Alpha: 0.05 - Batch 107/249 - Min Loss: 25.48 - Loss: 25.48883972150984\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " Iter: 0 - Alpha: 0.05 - Batch 107/249 - Min Loss: 25.48 - Loss: 25.48883972150984\n",
       " Iter: 0 - Alpha: 0.05 - Batch 108/249 - Min Loss: 25.38 - Loss: 25.381193237232704\n",
       " Iter: 0 - Alpha: 0.05 - Batch 109/249 - Min Loss: 25.28 - Loss: 25.289942704084417\n",
       " Iter: 0 - Alpha: 0.05 - Batch 110/249 - Min Loss: 25.21 - Loss: 25.218444557075593\n",
@@ -5131,13 +5125,7 @@
       " Iter: 4 - Alpha: 0.048 - Batch 102/249 - Min Loss: 11.60 - Loss: 11.601710099576286\n",
       " Iter: 4 - Alpha: 0.048 - Batch 103/249 - Min Loss: 11.59 - Loss: 11.599373007925191\n",
       " Iter: 4 - Alpha: 0.048 - Batch 104/249 - Min Loss: 11.59 - Loss: 11.599157350887797\n",
-      " Iter: 4 - Alpha: 0.048 - Batch 105/249 - Min Loss: 11.59 - Loss: 11.59636804953803\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " Iter: 4 - Alpha: 0.048 - Batch 105/249 - Min Loss: 11.59 - Loss: 11.59636804953803\n",
       " Iter: 4 - Alpha: 0.048 - Batch 107/249 - Min Loss: 11.58 - Loss: 11.585366901454583\n",
       " Iter: 4 - Alpha: 0.048 - Batch 126/249 - Min Loss: 11.57 - Loss: 11.577137637529955\n",
       " Iter: 4 - Alpha: 0.048 - Batch 127/249 - Min Loss: 11.56 - Loss: 11.56718687077202\n",
@@ -5331,13 +5319,7 @@
       " Iter: 10 - Alpha: 0.045 - Batch 56/249 - Min Loss: 10.28 - Loss: 10.289527446769945\n",
       " Iter: 10 - Alpha: 0.045 - Batch 57/249 - Min Loss: 10.27 - Loss: 10.271376725401213\n",
       " Iter: 10 - Alpha: 0.045 - Batch 150/249 - Min Loss: 10.27 - Loss: 10.271246704885957\n",
-      " Iter: 10 - Alpha: 0.045 - Batch 151/249 - Min Loss: 10.26 - Loss: 10.267236052369064\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " Iter: 10 - Alpha: 0.045 - Batch 151/249 - Min Loss: 10.26 - Loss: 10.267236052369064\n",
       " Iter: 10 - Alpha: 0.045 - Batch 152/249 - Min Loss: 10.26 - Loss: 10.263607573233973\n",
       " Iter: 10 - Alpha: 0.045 - Batch 153/249 - Min Loss: 10.25 - Loss: 10.257945986492956\n",
       " Iter: 10 - Alpha: 0.045 - Batch 212/249 - Min Loss: 10.25 - Loss: 10.260385440876602\n",
@@ -5911,6 +5893,449 @@
     "        init_cell.data[:,0] += 1\n",
     "        return (init_hidden, init_cell)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapter 15 - Federated Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random, sys, codecs\n",
+    "from collections import Counter\n",
+    "\n",
+    "np.random.seed(12345)\n",
+    "with codecs.open('spam.txt', 'r', encoding='utf-8', errors='ignore') as f:\n",
+    "    raw = f.readlines()\n",
+    "    \n",
+    "vocab, spam, ham = (set(['<unk>']), list(), list())\n",
+    "for row in raw:\n",
+    "    spam.append(set(row[:-2].split(' ')))\n",
+    "    for word in spam[-1]:\n",
+    "        vocab.add(word)\n",
+    "        \n",
+    "with codecs.open('ham.txt', 'r', encoding='utf-8', errors='ignore') as f:\n",
+    "    raw = f.readlines()\n",
+    "    \n",
+    "for row in raw:\n",
+    "    ham.append(set(row[:-2].split(' ')))\n",
+    "    for word in ham[-1]:\n",
+    "        vocab.add(word)\n",
+    "        \n",
+    "vocab, w2i = (list(vocab), {})\n",
+    "for i, w in enumerate(vocab):\n",
+    "    w2i[w] = i\n",
+    "    \n",
+    "def to_indices(input, l=500):\n",
+    "    indices = list()\n",
+    "    for line in input:\n",
+    "        if (len(line) < l):\n",
+    "            line = list(line) + ['<unk>'] * (l - len(line))\n",
+    "            idxs = list()\n",
+    "            for word in line:\n",
+    "                idxs.append(w2i[word])\n",
+    "            indices.append(idxs)\n",
+    "    return indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spam_idx = to_indices(spam)\n",
+    "ham_idx = to_indices(ham)\n",
+    "\n",
+    "train_spam_idx = spam_idx[0:-1000]\n",
+    "train_ham_idx = ham_idx[0:-1000]\n",
+    "\n",
+    "test_spam_idx = spam_idx[-1000:]\n",
+    "test_ham_idx = ham_idx[-1000:]\n",
+    "\n",
+    "train_data = list()\n",
+    "train_target = list()\n",
+    "\n",
+    "test_data = list()\n",
+    "test_target = list()\n",
+    "\n",
+    "for i in range(max(len(train_spam_idx), len(train_ham_idx))):\n",
+    "    train_data.append(train_spam_idx[i % len(train_spam_idx)])\n",
+    "    train_target.append([1])\n",
+    "    \n",
+    "    train_data.append(train_ham_idx[i % len(train_ham_idx)])\n",
+    "    train_target.append([0])\n",
+    "    \n",
+    "for i in range(max(len(test_spam_idx), len(test_ham_idx))):\n",
+    "    test_data.append(test_spam_idx[i % len(test_spam_idx)])\n",
+    "    test_target.append([1])\n",
+    "    \n",
+    "    test_data.append(test_ham_idx[i % len(test_ham_idx)])\n",
+    "    test_target.append([0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, input_data, target_data, batch_size=500, iterations=5):\n",
+    "    \n",
+    "    criterion = MSELoss()\n",
+    "    optim = SGD(parameters=model.get_parameters(), alpha=0.01)\n",
+    "    \n",
+    "    n_batches = int(len(input_data) / batch_size)\n",
+    "    for iter in range(iterations):\n",
+    "        iter_loss = 0\n",
+    "        for b_i in range(n_batches):\n",
+    "            bs = batch_size\n",
+    "            # padding token should stay at 0\n",
+    "            model.weight.data[w2i['<unk>']] *= 0 \n",
+    "            input = Tensor(input_data[b_i*bs:(b_i+1)*bs], autograd=True)\n",
+    "            target = Tensor(target_data[b_i*bs:(b_i+1)*bs], autograd=True)\n",
+    "\n",
+    "            pred = model.forward(input).sum(1).sigmoid()\n",
+    "            loss = criterion.forward(pred,target)\n",
+    "            loss.backward()\n",
+    "            optim.step()\n",
+    "\n",
+    "            iter_loss += loss.data[0] / bs\n",
+    "\n",
+    "            sys.stdout.write(\"\\r\\tLoss:\" + str(iter_loss / (b_i+1)))\n",
+    "        print()\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(model, test_input, test_output):\n",
+    "    \n",
+    "    model.weight.data[w2i['<unk>']] *= 0 \n",
+    "    \n",
+    "    input = Tensor(test_input, autograd=True)\n",
+    "    target = Tensor(test_output, autograd=True)\n",
+    "\n",
+    "    pred = model.forward(input).sum(1).sigmoid()\n",
+    "    return ((pred.data > 0.5) == target.data).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Embedding(vocab_size=len(vocab), dim=1)\n",
+    "model.weight.data *= 0\n",
+    "criterion = MSELoss()\n",
+    "optim = SGD(parameters=model.get_parameters(), alpha=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLoss:0.023584833748427292\n",
+      "% Correct on Test Set: 99.3\n",
+      "\tLoss:0.007378992849700779\n",
+      "% Correct on Test Set: 99.35000000000001\n",
+      "\tLoss:0.0056089148968962375\n",
+      "% Correct on Test Set: 99.35000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    model = train(model, train_data, train_target, iterations=1)\n",
+    "    print('% Correct on Test Set: ' + \\\n",
+    "         str(test(model, test_data, test_target)*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 337 - Adding Federated Learning\n",
+    "\n",
+    "bob = (train_data[:1000], train_target[:1000])\n",
+    "alice = (train_data[1000:2000], train_target[1000:2000])\n",
+    "sue = (train_data[2000:], train_target[2000:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Training Round...\n",
+      "\tStep 1: Send the model to Bob\n",
+      "\tLoss:0.0046710909781929336\n",
+      "\n",
+      "\tStep 2: Send the model to Alice\n",
+      "\tLoss:0.006122232760665586\n",
+      "\n",
+      "\tStep 3: Send the model to Sue\n",
+      "\tLoss:0.0049083079517714585\n",
+      "\n",
+      "\tAverage Everyone's New Models\n",
+      "\t% Correct on Test Set: 99.35000000000001\n",
+      "\n",
+      "Repeat!!!\n",
+      "\n",
+      "Starting Training Round...\n",
+      "\tStep 1: Send the model to Bob\n",
+      "\tLoss:0.0046710909781929354\n",
+      "\n",
+      "\tStep 2: Send the model to Alice\n",
+      "\tLoss:0.0061222327606655865\n",
+      "\n",
+      "\tStep 3: Send the model to Sue\n",
+      "\tLoss:0.0049083079517714505\n",
+      "\n",
+      "\tAverage Everyone's New Models\n",
+      "\t% Correct on Test Set: 99.35000000000001\n",
+      "\n",
+      "Repeat!!!\n",
+      "\n",
+      "Starting Training Round...\n",
+      "\tStep 1: Send the model to Bob\n",
+      "\tLoss:0.0046710909781929354\n",
+      "\n",
+      "\tStep 2: Send the model to Alice\n",
+      "\tLoss:0.0061222327606655865\n",
+      "\n",
+      "\tStep 3: Send the model to Sue\n",
+      "\tLoss:0.0049083079517714505\n",
+      "\n",
+      "\tAverage Everyone's New Models\n",
+      "\t% Correct on Test Set: 99.35000000000001\n",
+      "\n",
+      "Repeat!!!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Page 338\n",
+    "import copy\n",
+    "\n",
+    "for i in range(3):\n",
+    "    print('Starting Training Round...')\n",
+    "    print('\\tStep 1: Send the model to Bob')\n",
+    "    bob_model = train(copy.deepcopy(model), bob[0], bob[1], iterations=1)\n",
+    "    \n",
+    "    print('\\n\\tStep 2: Send the model to Alice')\n",
+    "    alice_model = train(copy.deepcopy(model), alice[0], alice[1], iterations=1)\n",
+    "    \n",
+    "    print('\\n\\tStep 3: Send the model to Sue')\n",
+    "    sue_model = train(copy.deepcopy(model), sue[0], sue[1], iterations=1)\n",
+    "    \n",
+    "    print('\\n\\tAverage Everyone\\'s New Models')\n",
+    "    model.weight.data = (bob_model.weight.data + \\\n",
+    "                         alice_model.weight.data + \\\n",
+    "                         sue_model.weight.data) / 3\n",
+    "    \n",
+    "    print('\\t% Correct on Test Set: ' + \\\n",
+    "          str(test(model, test_data, test_target) * 100))\n",
+    "    print('\\nRepeat!!!\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "\tLoss:0.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "\n",
+    "bobs_email = ['my', 'computer', 'password', 'is', 'pizza']\n",
+    "\n",
+    "bob_input = np.array([[w2i[x] for x in bobs_email]])\n",
+    "bob_target = np.array([[0]])\n",
+    "\n",
+    "model = Embedding(vocab_size=len(vocab), dim=1)\n",
+    "model.weight.data *= 0\n",
+    "\n",
+    "bobs_model = train(copy.deepcopy(model), \n",
+    "                   bob_input, bob_target, iterations=1, batch_size=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 342 - Homomorphic encryption\n",
+    "import phe\n",
+    "\n",
+    "model = Embedding(vocab_size=len(vocab), dim=1)\n",
+    "model.weight.data *= 0\n",
+    "\n",
+    "public_key, private_key = phe.generate_paillier_keypair(n_length=128)\n",
+    "\n",
+    "def train_and_encrypt(model, input, target, pubkey):\n",
+    "    new_model = train(copy.deepcopy(model), input, target, iterations=1)\n",
+    "    \n",
+    "    encrypted_weights = list()\n",
+    "    for val in new_model.weight.data[:, 0]:\n",
+    "        encrypted_weights.append(public_key.encrypt(val))\n",
+    "    ew = np.array(encrypted_weights).reshape(new_model.weight.data.shape)\n",
+    "    \n",
+    "    return ew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Training Round...\n",
+      "\tStep 1: Send the model to Bob\n",
+      "\tLoss:0.1552942409030046\n",
+      "\n",
+      "\tStep 2: Send the model to Alice\n",
+      "\tLoss:0.15925392516922943\n",
+      "\n",
+      "\tStep 3: Send the model to Sue\n",
+      "\tLoss:0.025689925626671783\n",
+      "\n",
+      "\tStep 4: Bob, Alice and Sue send their\n",
+      "\tencrypted models to each other.\n",
+      "\n",
+      "\tStep 5: only the aggregated model\n",
+      "\tis sent back to the model owner who\n",
+      "\t can decrypt it.\n",
+      "\t% Correct on Test Set: 99.35000000000001\n",
+      "Starting Training Round...\n",
+      "\tStep 1: Send the model to Bob\n",
+      "\tLoss:0.02006076080174494\n",
+      "\n",
+      "\tStep 2: Send the model to Alice\n",
+      "\tLoss:0.022731850482818648\n",
+      "\n",
+      "\tStep 3: Send the model to Sue\n",
+      "\tLoss:0.011945692396603607\n",
+      "\n",
+      "\tStep 4: Bob, Alice and Sue send their\n",
+      "\tencrypted models to each other.\n",
+      "\n",
+      "\tStep 5: only the aggregated model\n",
+      "\tis sent back to the model owner who\n",
+      "\t can decrypt it.\n",
+      "\t% Correct on Test Set: 99.3\n",
+      "Starting Training Round...\n",
+      "\tStep 1: Send the model to Bob\n",
+      "\tLoss:0.012179628437467019\n",
+      "\n",
+      "\tStep 2: Send the model to Alice\n",
+      "\tLoss:0.014504046340311442\n",
+      "\n",
+      "\tStep 3: Send the model to Sue\n",
+      "\tLoss:0.009495061347300245\n",
+      "\n",
+      "\tStep 4: Bob, Alice and Sue send their\n",
+      "\tencrypted models to each other.\n",
+      "\n",
+      "\tStep 5: only the aggregated model\n",
+      "\tis sent back to the model owner who\n",
+      "\t can decrypt it.\n",
+      "\t% Correct on Test Set: 99.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    print('Starting Training Round...')\n",
+    "    print('\\tStep 1: Send the model to Bob')\n",
+    "    bob_encrypted_model = train_and_encrypt(copy.deepcopy(model), \n",
+    "                                            bob[0], bob[1], public_key)\n",
+    "    \n",
+    "    print('\\n\\tStep 2: Send the model to Alice')\n",
+    "    alice_encrypted_model = train_and_encrypt(copy.deepcopy(model), \n",
+    "                                              alice[0], alice[1], public_key)\n",
+    "    \n",
+    "    print('\\n\\tStep 3: Send the model to Sue')\n",
+    "    sue_encrypted_model = train_and_encrypt(copy.deepcopy(model), \n",
+    "                                            sue[0], sue[1], public_key)\n",
+    "    \n",
+    "    print('\\n\\tStep 4: Bob, Alice and Sue send their')\n",
+    "    print('\\tencrypted models to each other.')\n",
+    "    aggregated_model = bob_encrypted_model + \\\n",
+    "                       alice_encrypted_model + \\\n",
+    "                       sue_encrypted_model\n",
+    "    \n",
+    "    print('\\n\\tStep 5: only the aggregated model')\n",
+    "    print('\\tis sent back to the model owner who')\n",
+    "    print('\\t can decrypt it.')\n",
+    "    \n",
+    "    raw_values = list()\n",
+    "    for val in aggregated_model.flatten():\n",
+    "        raw_values.append(private_key.decrypt(val))\n",
+    "    \n",
+    "    new = np.array(raw_values).reshape(model.weight.data.shape) / 3\n",
+    "    model.weight.data = new\n",
+    "    \n",
+    "    print('\\t% Correct on Test Set: ' + \\\n",
+    "          str(test(model, test_data, test_target) * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
