--- a/Spam Import (Chapter 16).ipynb
+++ b/Spam Import (Chapter 16).ipynb
@@ -2,17 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c501aa1c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "\n",
-    "response = requests.get('https://cs.stanford.edu/people/karpathy/char-rnn/shakespear.txt')\n",
+    "response = requests.get('https://github.com/iamtrask/Grokking-Deep-Learning/raw/master/spam.txt')\n",
     "data = response.text\n",
     "\n",
     "with open('spam.txt', 'w') as f:\n",
+    "    f.writelines(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "37b48205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "response = requests.get('https://github.com/iamtrask/Grokking-Deep-Learning/blob/master/ham.txt')\n",
+    "data = response.text\n",
+    "\n",
+    "with open('ham.txt', 'w') as f:\n",
     "    f.writelines(data)"
    ]
   }
